package poker.kata;

public enum CardSuit {
    // No need to set a value, since suits in poker are all worth the same.
    CLUBS, SPADES, HEARTS, DIAMONDS,
}
